[package]
name = "jrawler-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"] } # Use rustls-tls for better cross-platform TLS
scraper = "0.19"
url = "2.5"
petgraph = "0.6"
tokio = { version = "1", features = ["full"] } # "full" enables rt-multi-thread, macros, io, time etc.
thiserror = "1.0" # For custom error types
log = "0.4"
env_logger = "0.11" # Simple logger implementation
dot = "0.1"
clap ={ version = "4.0", features = ["derive"]} # For command line argument parsing
regex = { version = "1", features = ["unicode"] } # For regex support
futures = "0.3.31"
graph = "0.3.1"
pathfinding = "4.14.0"
